2.11 / <not released yet>

 - No changes yet


2.10 / 22-Oct-2022

 - Fixed
   - BandwidthDetection in BSD wasn't correctly converting kernel reported
     bits per second values to Mbits per second resulting in a sanity check
     being triggered and detected values not being used expect for PPPoE
     interfaces which incorrectly were detected as 64000 Mbit
   - Image output of 5 minute graph wasn't possible if data retention of the
     5 minute time period was configured as unlimited
     (pull request by Sebastian Lechte)
   - Estimates and average rates weren't calculated correctly for daily,
     monthly and yearly time periods when monitoring of the interface had been
     started during the ongoing time period
   - Estimates weren't being shown in summary output when OutputStyle or
     --style was configured with a value less than 2 (vnstat)
   - Alignment of column header in short output wasn't correct when
     OutputStyle or --style was configured with the value 0 (vnstat)
 - New
   - Support input of more than 31 characters in interface name when using
     interface1+interface2 syntax data merge queries
   - Support passing --config option multiple times, later files override
     earlier files if settings overlap (vnstat and vnstati)
   - Add configuration option EstimateVisible for controlling the visibility
     of the estimate line
   - Add configuration option EstimateText for modifying the default
     "estimated" text string when the estimate line is visible
   - Add --style support to -tr / --traffic output
   - Add summary option to --json and --xml outputs
   - Add timestamps to --json and --xml outputs
   - Add Prometheus compatible metrics endpoint cgi to examples
     (examples/vnstat-metrics.cgi)


2.9 / 23-Jan-2022

 - Fixed
   - RescanDatabaseOnSave configuration option wasn't being read from the
     configuration file resulting in the feature always being enabled